--- a/styles/main.css
+++ b/styles/main.css
@@ -1568,4 +1568,160 @@ a[class] {
   }
 }
 
+.advantages__list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto auto;
+  gap: 16px;
+}
+@media (width <= 90.06125rem) {
+  .advantages__list {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__list {
+    grid-template-columns: 1fr;
+  }
+}
+.advantages__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 20px;
+  row-gap: 35px;
+  background-color: var(--color-light);
+  padding: 50px 15px 50px 25px;
+  overflow: hidden;
+}
+@media (width <= 63.99875rem) {
+  .advantages__item {
+    padding-bottom: 25px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__item {
+    height: 15.625rem;
+  }
+}
+@media (width <= 30.06125rem) {
+  .advantages__item {
+    height: 22.25rem;
+  }
+}
+.advantages__item:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+@media (width <= 63.99875rem) {
+  .advantages__item:nth-child(1) {
+    row-gap: 8.625rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__item:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1/2;
+    row-gap: 2.8125rem;
+  }
+}
+.advantages__item:nth-child(2) {
+  grid-column: 2/4;
+  grid-row: 1;
+}
+@media (width <= 90.06125rem) {
+  .advantages__item:nth-child(2) {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+}
+@media (width <= 63.99875rem) {
+  .advantages__item:nth-child(2) {
+    row-gap: 2.8125rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__item:nth-child(2) {
+    grid-column: 1;
+    grid-row: 3/4;
+  }
+}
+.advantages__item:nth-child(3) {
+  grid-column: 4/5;
+  grid-row: 1/3;
+}
+@media (width <= 90.06125rem) {
+  .advantages__item:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    background-color: var(--color-blue);
+    color: var(--color-light);
+  }
+  .advantages__item:nth-child(3) h3 {
+    color: var(--color-light);
+  }
+}
+@media (width <= 63.99875rem) {
+  .advantages__item:nth-child(3) {
+    row-gap: 8.625rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__item:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2/3;
+    row-gap: 2.8125rem;
+  }
+}
+.advantages__item:nth-child(4) {
+  grid-column: 2/4;
+  grid-row: 2;
+}
+@media (width <= 90.06125rem) {
+  .advantages__item:nth-child(4) {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    background-color: var(--color-blue);
+    color: var(--color-light);
+  }
+  .advantages__item:nth-child(4) h3 {
+    color: var(--color-light);
+  }
+}
+@media (width <= 63.99875rem) {
+  .advantages__item:nth-child(4) {
+    row-gap: 2.8125rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__item:nth-child(4) {
+    grid-column: 1;
+    grid-row: 4/5;
+  }
+}
+.advantages__title {
+  font-size: clamp(1.7777777778rem, 1.7264957265rem + 0.2564102564vw, 2rem);
+}
+@media (width <= 63.99875rem) {
+  .advantages__title {
+    font-size: 32px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__title {
+    font-size: 22px;
+  }
+}
+.advantages__description {
+  font-size: 18px;
+  line-height: 1;
+}
+@media (width <= 47.99875rem) {
+  .advantages__description {
+    font-size: 16px;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
