--- a/styles/blocks/_workflow-gallery.scss
+++ b/styles/blocks/_workflow-gallery.scss
@@ -1,16 +1,16 @@
 @use "../helpers"as *;
 
 .workflow-gallery {
-    &__swiper {
+    &__wrap{
         width: 100%;
 
     }
 
-    &__wrap {
+    &__swiper  {
         position: relative;
     }
 
-    &__inner {
+    &__item {
         aspect-ratio: 12 / 5;
         max-height: 800px;
         width: 100%;
