--- a/styles/main.css
+++ b/styles/main.css
@@ -1724,24 +1724,24 @@ a[class] {
   }
 }
 
-.workflow-gallery__swiper {
+.workflow-gallery__wrap {
   width: 100%;
 }
-.workflow-gallery__wrap {
+.workflow-gallery__swiper {
   position: relative;
 }
-.workflow-gallery__inner {
+.workflow-gallery__item {
   aspect-ratio: 12/5;
   max-height: 800px;
   width: 100%;
 }
 @media (width <= 63.99875rem) {
-  .workflow-gallery__inner {
+  .workflow-gallery__item {
     aspect-ratio: 48/35;
   }
 }
 @media (width <= 47.99875rem) {
-  .workflow-gallery__inner {
+  .workflow-gallery__item {
     aspect-ratio: 45/64;
   }
 }
@@ -1838,6 +1838,49 @@ a[class] {
 @media (width <= 63.99875rem) {
   .banner__title span {
     display: inline;
+  }
+}
+
+.airparnets {
+  min-width: 0;
+}
+.airparnets__wrap {
+  width: 100%;
+}
+.airparnets__swiper {
+  overflow: visible;
+}
+.airparnets .swiper-wrapper {
+  transition-timing-function: linear;
+}
+.airparnets .swiper-slide {
+  width: auto;
+}
+.airparnets__item {
+  width: auto;
+  margin-right: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.airparnets__slide-image {
+  display: block;
+  object-fit: cover;
+  width: 300px;
+  height: 103px;
+  max-width: 100%;
+  max-height: 100%;
+}
+@media (width <= 47.99875rem) {
+  .airparnets__slide-image {
+    width: 188px;
+    height: 73px;
   }
 }
 
