--- a/styles/blocks/_cargo-types.scss
+++ b/styles/blocks/_cargo-types.scss
@@ -186,34 +186,37 @@
     }
 
     &__modal {
-        border-radius: 20px;
-        background: var(--color-base) !important;
-        vertical-align: top !important;
-        width: 1640px;
+        visibility: hidden;
+        opacity: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
         height: 100%;
-        padding-top: 100px !important;
-        padding-bottom: 100px !important;
-        position: relative;
+        background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+        align-items: center;
+        z-index: 999;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 
         &::-webkit-scrollbar {
             width: 0;
         }
 
         &-inner {
-            position: relative;
             display: grid;
-            grid-template-columns: 1116px auto;
-            column-gap: 30px;
             justify-content: center;
+            background-color: var(--color-base);
+            width: 100%;
+            transform: scale(0.9);
+            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+            overflow-y: auto;
         }
 
         &-close {
-
             display: flex;
             flex-direction: column;
-            height: 80vh;
-            min-height: 200px;
-            overflow: auto;
             position: sticky;
             top: 0;
             right: 0;
@@ -225,7 +228,6 @@
             row-gap: 30px;
             margin-inline: auto;
             height: 100%;
-
 
             ::marker {
                 font-weight: 700;
@@ -251,23 +253,30 @@
         &-subitem {
             list-style-type: disc;
             font-weight: 400;
-
         }
+    }
 
-
+    &__wrapper {
+        position: relative;
+        display: grid;
+        grid-template-columns: auto 75px;
+        width: 100%;
+        height: 100%;
+        background-color: var(--color-base);
+        padding: 100px;
+        border-radius: 20px;
     }
 }
 
-// .fancybox-bg {
-//     background-color: var(--color-base) !important;
-//     border-radius: 20px;
-// }
+.modal.show {
+    visibility: visible;
+    opacity: 1;
+}
 
-// .fancybox-is-open .fancybox-bg {
-//     opacity: 1 !important;
-//     border-radius: 20px;
-// }
+.modal.show .cargo-types__modal-inner {
+    transform: scale(1);
+}
 
-button.fancybox-button--close {
-    display: none;
+body.no-scroll {
+    overflow: hidden;
 }
