--- a/styles/main.css
+++ b/styles/main.css
@@ -2345,31 +2345,35 @@ a[class] {
   flex-direction: column;
 }
 .cargo-types__modal {
-  border-radius: 20px;
-  background: var(--color-base) !important;
-  vertical-align: top !important;
-  width: 1640px;
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  padding-top: 100px !important;
-  padding-bottom: 100px !important;
-  position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 .cargo-types__modal::-webkit-scrollbar {
   width: 0;
 }
 .cargo-types__modal-inner {
-  position: relative;
   display: grid;
-  grid-template-columns: 1116px auto;
-  column-gap: 30px;
   justify-content: center;
+  background-color: var(--color-base);
+  width: 100%;
+  transform: scale(0.9);
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  overflow-y: auto;
 }
 .cargo-types__modal-close {
   display: flex;
   flex-direction: column;
-  height: 80vh;
-  min-height: 200px;
-  overflow: auto;
   position: sticky;
   top: 0;
   right: 0;
@@ -2400,9 +2404,28 @@ a[class] {
   list-style-type: disc;
   font-weight: 400;
 }
+.cargo-types__wrapper {
+  position: relative;
+  display: grid;
+  grid-template-columns: auto 75px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-base);
+  padding: 100px;
+  border-radius: 20px;
+}
 
-button.fancybox-button--close {
-  display: none;
+.modal.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal.show .cargo-types__modal-inner {
+  transform: scale(1);
+}
+
+body.no-scroll {
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=main.css.map */
